Emergency fix: Revert "Fix the slight lighttable misalignement in scrolledwindow"
This reverts commit 2a5e1b948e1319317516f47290b436138d8f3941. It introduces an infinite
loop of size allocations, triggering an infinite loop of thumbnails redraw,
putting CPU on its knees when the app is sitting idle.

--- a/data/themes/ansel.css
+++ b/data/themes/ansel.css
@@ -1282,8 +1282,7 @@ menu.dt-masks-context-menu menuitem.dt-masks-checked:not(:disabled) label.dt-mas
   11. THUMBTABLE (FILMSTRIP / LIGHTTABLE)
   ======================================*/
 
-.dt_thumbtable,
-.background {
+.dt_thumbtable {
   background-color: @lighttable_bg_color;
 }
 
